fix: 1st and 2nd equilibrium works